BUG FIX: Min height in modified so no extra space below booking button and removed postion:relative in div.boxes css to get rid of extra space at the bottom of About page

--- a/public/stylesheets/iphone.css
+++ b/public/stylesheets/iphone.css
@@ -1,7 +1,8 @@
 /************************ LISTS *************************/
 
 .content {
-    min-height: 480px;
+    
+    min-height: 340px;
 	background:#f2f2f2;
 }
 
